<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/buttons_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickBtn1"
            android:text="@string/btn1_MapsActivity" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickBtn2"
            android:text="@string/btn2_MapsActivity" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout_1"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickBtn3"
            android:text="@string/btn3_MapsActivity" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickBtn4"
            android:text="@string/btn4_MapsActivity" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@id/buttons_layout_2"
        android:background="@android:color/transparent"
        android:onClick="onClickBtn5"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/info" />

</RelativeLayout>